hachoir-metadata 1.3.1
======================

 * setup.py compiles dialog.ui to dialog_ui.py and install
   hachoir-metadata-qt. Create --disable-qt option to skip
   hachoir-metadata-qt installation.

hachoir-metadata 1.3 (2010-01-20)
=================================

 * Create hachoir-metadata-qt: a graphical interface (Qt toolkit)
   to display files metadata
 * Create ISO9660 extractor
 * Hide Hachoir warnings by default (use --verbose to show them)
 * hachoir-metadata program: create --force-parser option to choose the parser

hachoir-metadata 1.2.1 (2008-10-16)
===================================

 * Using --raw, strings are not normalized (don't strip trailing space, new
   line, nul byte, etc.)
 * Extract much more informations from Microsoft Office documents (.doc, .xsl,
   .pps, etc.)
 * Improve OLE2 (Word) extractor
 * Fix ASF extractor for hachoir-parser 1.2.1

hachoir-metadata 1.2 (2008-09-03)
=================================

 * Create --maxlen option for hachoir-metadata program: --maxlen=0 disable
   the arbitrary string length limit
 * Create FLAC metadata extractor
 * Create hachoir_metadata.config, especially MAX_STR_LENGTH option
   (maximum string length)
 * GIF image may contains multiple comments

hachoir-metadata 1.1 (2008-04-01)
=================================

 * More extractors are more stable and fault tolerant
 * Create basic Gtk+ GUI: hachoir-metadata-gtk
 * Catch error on data conversion
 * Read width and height DPI for most image formats
 * JPEG (EXIF): read GPS informations
 * Each data item can has its own "setter"
 * Add more ID3 keys (TCOP, TDAT, TRDA, TORY, TIT1)
 * Create datetime filter supporting timezone
 * Add "meters", "pixels", "DPI" suffix for human display
 * Create SWF extractor
 * RIFF: read also informations from headers field, compute audio
   compression rate
 * MOV: read width and height
 * ASF: read album artist

hachoir-metadata 1.0.1 (???)
============================
