@@ -4,6 +4,8 @@ hachoir-metadata 1.3.1
  * setup.py compiles dialog.ui to dialog_ui.py and install
    hachoir-metadata-qt. Create --disable-qt option to skip
    hachoir-metadata-qt installation.
+ * Create a MANIFEST.in file to include extra files like ChangeLog, AUTHORS,
+   gnome and kde subdirectories, test_doc.py, etc.
 
 hachoir-metadata 1.3 (2010-01-20)
 =================================
